--- a/app/src/main/res/drawable/round_corner.xml
+++ b/app/src/main/res/drawable/round_corner.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#B1A8A8" />
+    <solid android:color="#FFEFEEEE" />
     <corners
         android:bottomLeftRadius="64dp"
         android:bottomRightRadius="64dp"
