--- a/app/src/main/res/layout/fragment_meals.xml
+++ b/app/src/main/res/layout/fragment_meals.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.MealsFragment">
+    tools:context=".ui.home.MealsFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/meals_rv"
