--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#A82A2A</color>
+
+    <color name="ghost_white">#F5F5F8</color>
+    <color name="Light_grayish_red">#EFEEEE</color>
+    <color name="gray_shade_95">#F2F2F2</color>
+
 </resources>
